fix size on mobile

--- a/styles/components/canvas.css
+++ b/styles/components/canvas.css
@@ -1,5 +1,5 @@
 .canvas-container {
-    max-width: 95vw;
+    max-width: 80vw;
     height: 60vw;
     /* height: fit-content; */
     cursor: pointer;
@@ -11,7 +11,7 @@ canvas {
 /* 
 @media screen and (max-width: 500px) {
     .canvas-container {
-        max-width: 95vw;
+        max-width: 80vw;
         height: 80vw;
     }
 } */
